@@ -1,6 +1,7 @@
-h2. 1.0.1, releases 01/12/2008
+h2. 1.0.1, releases 02/12/2008
 
 * Added implementation of GET /api.xro/1.0/accounts
+* Replaced Invoice.id, Contact.id etc with Invoice.invoice_id, Contact.contact_id to avoid Object.id errors
 
 
 h2. 1.0.0, released 01/12/2008
